src/ui/snapshots/starfold__ui__places__tests__places-100x30.snap
---
source: src/ui/places.rs
expression: "drawn(&mut places, 100, 30)"
---



  ╔═ PLACES ═════════════════════════════════════════════════════════════════════════════════════╗
  ║Search:                                                                                       ║
  ║Type to search names and paths                                                                ║
  ║BOOKMARKS                                           │ SELECTED PLACE                          ║
  ║> Projects        /home/user/projects               │ Projects                                ║
  ║  Writing         /home/user/documents              │ Mounted at  /home/user/projects         ║
  ║DEVICES             CAPACITY  DEVICE                │                                         ║
  ║  Camera            1.0 TB    /dev/sdb1    [unmount]│                                         ║
  ║VOLUMES                       CAPACITY  DEVICE      │                                         ║
  ║  Scratch         /mnt/scratch                      │                                         ║
  ║NETWORK                                             │                                         ║
  ║  Office          /mnt/office                       │                                         ║
  ║LOCATIONS                                           │                                         ║
  ║  Home            /home/user                        │                                         ║
  ║  Root            /                                 │                                         ║
  ║                                                    │                                         ║
  ║                                                    │                                         ║
  ║                                                    │                                         ║
  ║                                                    │                                         ║
  ║                                                    │                                         ║
  ║                                                    │                                         ║
  ║                                                    │                                         ║
  ║F2 edit  del remove  F5 scan  F6 unmount  F3 info  F7 empty trash                             ║
  ╚═══════ enter open · F2 rename · F3 info · del remove · F5 scan · F6 unmount · F7 trash · esc ╝
