src/ui/snapshots/starfold__ui__places__tests__places-bookmark-editor-100x30.snap
---
source: src/ui/places.rs
expression: "drawn(&mut places, 100, 30)"
---



  ╔═ PLACES ═════════════════════════════════════════════════════════════════════════════════════╗
  ║BOOKMARK DIRECTORY                                                                            ║
  ║/home/user/projects                                                                           ║
  ║                                                                                              ║
  ║Projects                                                                                      ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ║                                                                                              ║
  ╚═══════════════════════════════════════════════════════════════════════ enter save · esc back ╝
