src/ui/snapshots/starfold__ui__places__tests__places-drive-details-100x30.snap
---
source: src/ui/places.rs
expression: "drawn(&mut drive, 100, 30)"
---



  ╔═ PLACES ═════════════════════════════════════════════════════════════════════════════════════╗
  ║Search:                                                                                       ║
  ║Type to search names and paths                                                                ║
  ║BOOKMARKS                                           │ SELECTED PLACE                          ║
  ║  Projects        /home/user/projects               │ Camera                                  ║
  ║  Writing         /home/user/documents              │ Label       Camera                      ║
  ║DEVICES             CAPACITY  DEVICE                │ Model       Portable SSD                ║
  ║> Camera            1.0 TB    /dev/sdb1    [unmount]│ Serial      XYZ123                      ║
  ║VOLUMES                       CAPACITY  DEVICE      │ UUID        A1B2-C3D4                   ║
  ║  Scratch         /mnt/scratch                      │ Connection  USB                         ║
  ║NETWORK                                             │ Device      /dev/sdb1                   ║
  ║  Office          /mnt/office                       │ Filesystem  exfat                       ║
  ║LOCATIONS                                           │ Capacity    1.0 TB                      ║
  ║  Home            /home/user                        │ Available   600.0 GB                    ║
  ║  Root            /                                 │ Mounted at  /run/media/user/CAMERA      ║
  ║                                                    │                                         ║
  ║                                                    │                                         ║
  ║                                                    │                                         ║
  ║                                                    │                                         ║
  ║                                                    │                                         ║
  ║                                                    │                                         ║
  ║                                                    │                                         ║
  ║F2 edit  del remove  F5 scan  F6 unmount  F3 info  F7 empty trash                             ║
  ╚═══════ enter open · F2 rename · F3 info · del remove · F5 scan · F6 unmount · F7 trash · esc ╝
