src/ui/snapshots/starfold__ui__places__tests__places-remove-60x21.snap
---
source: src/ui/places.rs
expression: "drawn(&mut places, 60, 21)"
---

  ╔═ PLACES ═════════════════════════════════════════════╗
  ║REMOVE BOOKMARK?                                      ║
  ║Projects  /home/user/projects                         ║
  ║y remove   n keep                                     ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ╚═══════════════════════════════════ y remove · n keep ╝
