src/ui/snapshots/starfold__ui__places__tests__places-search-60x21.snap
---
source: src/ui/places.rs
expression: "drawn(&mut places, 60, 21)"
---

  ╔═ PLACES ═════════════════════════════════════════════╗
  ║Search: office                                        ║
  ║Type to search names and paths                        ║
  ║NETWORK                                               ║
  ║> Office           /mnt/office                        ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║F2 edit  del remove  F5 scan  F6 unmount  F3 info  F7 ║
  ╚═════════════ enter open · F7 empty trash · esc close ╝
