src/ui/snapshots/starfold__ui__places__tests__places-unmount-60x21.snap
---
source: src/ui/places.rs
expression: "drawn(&mut places, 60, 21)"
---

  ╔═ PLACES ═════════════════════════════════════════════╗
  ║UNMOUNT VOLUME?                                       ║
  ║Camera  /run/media/user/CAMERA                        ║
  ║y unmount   n keep                                    ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ║                                                      ║
  ╚══════════════════════════════════ y unmount · n keep ╝
