src/ui/snapshots/starfold__ui__places__tests__places-unmounting-60x21.snap
---
source: src/ui/places.rs
expression: "drawn(&mut places, 60, 21)"
---

  ╔═ PLACES ═════════════════════════════════════════════╗
  ║Search:                                               ║
  ║⠙ Unmounting Camera…                                  ║
  ║BOOKMARKS                                             ║
  ║> Projects         /home/user/projects                ║
  ║  Writing          /home/user/documents               ║
  ║DEVICES               CAPACITY  DEVICE                ║
  ║  Camera              1.0 TB    /dev/sdb1    [ busy ] ║
  ║VOLUMES                         CAPACITY  DEVICE      ║
  ║  Scratch          /mnt/scratch                       ║
  ║NETWORK                                               ║
  ║  Office           /mnt/office                        ║
  ║LOCATIONS                                             ║
  ║  Home             /home/user                         ║
  ║  Root             /                                  ║
  ║                                                      ║
  ║                                                      ║
  ║F2 edit  del remove  F5 scan  F6 unmount  F3 info  F7 ║
  ╚═════════════ enter open · F7 empty trash · esc close ╝
